Atualizacao do Menu e a Pesquisa

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -1,1 +1,91 @@
 @charset "UTF-8";
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+/*=====================Cabeçalho=====================*/
+header{
+    background-color: red;
+}
+header>h1{
+    flex: 0 0 200px;
+    padding: 12px;
+    text-align: center;
+}
+
+span#burger{
+    background-color: #1f1e1e;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+menu{
+    display: none;
+}
+menu>ul{
+    list-style-type: none;
+}
+menu>ul>li>a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: brown;
+    border: 2px solid gray;
+}
+menu>ul>li>a:hover{
+    background-color: darkred;
+}
+/*=====================Corpo=====================*/
+
+main{
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+}
+/*=====================Pesquisa=====================*/
+div#Pesq{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-start;
+    height: 70vh;
+    background: url("../Poster/Poster.jpg") no-repeat;
+    background-size: cover;
+    background-position: center right;
+}
+div#pesq2{
+    width: 95%;
+    height: 25%;
+    background-color: pink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+input#caixa{
+    width: 300px;
+    height: 40px;
+    background-color: red;
+    border: none;
+    padding: 6px;
+    outline: none;
+}
+button#int{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    background-image: url("../Poster/interrogacao.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: none;
+
+}
