--- a/Estilos/Media-Querry.css
+++ b/Estilos/Media-Querry.css
@@ -16,7 +16,6 @@
         width: 100%;
         text-align: left;
 
-        background-color: red;
         flex: 2;
     }
     span#burger{
@@ -31,7 +30,9 @@
         padding: 0px;
         list-style-type: none;
         display: flex;
-        justify-content: flex-end;   /* empurra para direita */
+        justify-content: flex-end;  
+        flex-flow: row wrap;
+        flex-wrap: wrap;
         gap: 15px;
         padding: 5px 20px 0px 0px;
     }
@@ -46,5 +47,72 @@
     menu>ul>li>a:hover{
         background-color: darkred;
     }
-    
+    /*=====================Pesquisa=====================*/
+    input#caixa{
+        width: 550px;
+        height: 50px;
+    }
+    button#int{
+        height: 45px;
+    }
+    /*=====================Filmes=====================*/
+    div#Filmes2025{
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto ;
+        height: 50%;
+
+        padding: 0px;
+    }
+    .filmes{
+        height: 100%;
+    }
+    .filmes>picture>img{
+    width: 220px;
+    }
+    /*=====================Lançamento=====================*/
+    div#Lancamento{
+        height: 47.2%;
+    }
+    div#Lancamento>h2{
+        text-align: center;
+        padding: 20px;
+    }
+    .Lanc{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .fam{
+        background-color: red;
+        width: 70%;
+        height: 64.5%;
+    }
+    .fam>h3{
+        text-align: center;
+
+        font-size: 1.6em;
+        padding: 20px;
+    }
+    .PLanc{
+        background-color: #ffa500;
+        width: 30%;
+        height: 50%;
+    }
+    .PLanc>ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+    }
+    .PLanc>ul>li{
+        padding: 12px;
+        margin: 20px;
+
+        border-bottom: 3px solid black;
+    }
+    /*=====================Series=====================*/
+
 }
