--- a/Estilos/Media-Querry2.css
+++ b/Estilos/Media-Querry2.css
@@ -3,7 +3,6 @@
      /*=====================Cabeçalho=====================*/
 
     header{
-        background-color: #ffa500;
         height: 13vh;
         width: 100%;
         display: flex;
@@ -39,14 +38,15 @@
     menu>ul>li>a{
         text-decoration: none;
         text-align: center;
-        background-color: brown;
-        border: 2px solid gray;
 
         width: 125px;
         height: 55px;
         padding-top: 17px;
 
         flex-shrink: 1;
+
+        background-color: #0D0D0D;
+        color: yellow;
     }
     menu>ul>li{
         display: flex;
@@ -54,9 +54,7 @@
         align-items: center;
 
     }
-    menu>ul>li>a:hover{
-        background-color: darkred;
-    }
+
 
      /*=====================Pesquisa=====================*/
 
@@ -83,19 +81,38 @@
 
     /*=====================Filmes=====================*/
     div#Filmes2025{
+        height: 128vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .filmesgrid{
         display: grid;
+        align-items: center;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto ;
-        height: 50%;
+        width: 100%;
+        height: 100%;
+
+
+        justify-content: space-evenly;
+        
 
         padding: 0px;
     }
     .filmes{
-        height: 100%;
+        height: 85%;
+        width: 20vw;
+        transition: 0.5s;
     }
     .filmes>picture>img{
         width: 240px;
         height: 320px;
+    }
+    .filmes:hover{
+        box-shadow: 0px 1px 17px gold;
     }
 
     /*=====================Lançamento=====================*/
