--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -107,7 +107,15 @@ button#int{
 
 .movies{
     background-color: gold;
-    height: 300vh;
+    height: 400vh;
+}
+.filmesgrid{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 div#Filmes2025{
     width: 100%;
@@ -120,34 +128,27 @@ div#Filmes2025{
     align-items: center;
     flex-direction: column;
 }
-.movies>h2{
-    font-size: 1.6em;
-    text-align: center;
-    padding: 20px;
-}
 .filmes{
-    width: 88%;
-    height: 16.7%;
+    width: 60%;
+    height: 30.7%;
+    margin: 10px;
     background-color: #0D0D0D;
+
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row nowrap column;
 }
 .filmes>picture>img{
-    width: 195px;
+    width: 205px;
 }
 
 div#Lancamento{
     width: 100%;
-    height: 13%;
+    height: 18%;
     background-color: gold;
 }
-div#Lancamento>h2{    
-    font-size: 1.6em;
-    text-align: center;
-    padding: 12px;
-}
+
 .Lanc{
     display: flex;
     justify-content: center;
@@ -155,11 +156,8 @@ div#Lancamento>h2{
     flex-direction: column;
     text-align: center;
 
-    height: 90%;
+    height: 74%;
     background-color: #060606;
-}
-.PLanc>h2{
-    font-size: 1.6em;
 }
 .PLanc>ul{
     width: 100%;
@@ -191,7 +189,7 @@ div#Lancamento>h2{
 /*=====================Series=====================*/
 
 div#series2025{
-    height: 235vh;
+    height: 250vh;
     background-color: gold;
 }
 .serie{
@@ -206,18 +204,14 @@ div#series2025{
     flex-direction: column;
     flex-wrap: nowrap;
 }
-div#series2025>h2{
-    text-align: center;
-    padding: 20px;
-}
 .series{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #0D0D0D;
-    width: 88%;
-    height: 23.8%;
+    width: 60%;
+    height: 23.3%;
 }
 .series>picture>img{
     width: 210px;
@@ -307,4 +301,8 @@ a#links{
 }
 a#links:hover{
     text-decoration: underline;
+}
+.text{
+    text-align: center;
+    padding: 20px;
 }
