--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -294,7 +294,7 @@ footer#link{
 .uteis>ul{
     list-style-type: none;    
 }
-a#links{
+.links{
     color: gold;
     text-decoration: none;
     text-align: center;
