--- a/Estilos/Media-Querry.css
+++ b/Estilos/Media-Querry.css
@@ -43,6 +43,8 @@
         background-color: #0D0D0D;
         color: yellow;
 
+        font-size: 1.3em;
+
     }
     /*=====================Pesquisa=====================*/
     input#caixa{
@@ -92,13 +94,16 @@
     }
     .filmes>picture{
         width: 220px;
+        height: 300px;
+        background-color: red;
 
         display: flex;
         justify-content: center;
         align-items: center;
     }
     .filmes>picture>img{
-        width: 220px;
+        width: 100%;
+        height: 100%;
     }
     
     /*=====================Lançamento=====================*/
@@ -112,15 +117,27 @@
         flex-wrap: nowrap;
         height: 110vh;
     }
+    .lancimg{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 88%;
+
+    }
+    .lancimg>img{
+        width: 700px;
+    }
     .fam{
         background-color: #0D0D0D;
         width: 90%;
         height: 63.5%;
+        flex-direction: column;
     }
     .fam>h3{
         text-align: center;
 
         font-size: 1.6em;
+        width: 600px;
         padding: 20px;
     }
     .PLanc{
@@ -134,6 +151,7 @@
         align-items: center;
         flex-direction: row;
         height: 100%;
+        width: 100%;
     }
     .PLanc>ul>li{
         padding: 12px;
@@ -190,8 +208,13 @@
         grid-template-rows: auto auto auto;
         gap: 20px;
     }
+    .Atores>picture{
+        width: 250px;
+        height: 400px;
+    }
     .Atores>picture>img{
-    width: 232px;
+        width: 100%;
+        height: 100%;
     }
     .name{
         font-size: 2em;
@@ -204,14 +227,7 @@
         background-color: #060606;
         height: 50vh;
     }
-    div#Plataformas>h2{
-        color: yellow;
-
-        text-align: center;
-        padding: 20px;
-    }
     .Plata{
-        background-color: pink;
         height: 78.5%;
         display: flex;
         flex-flow: row nowrap;
@@ -219,8 +235,21 @@
     .plat{
         width: 100%;
         height: 100%;
-    background-color: #0D0D0D;
+        background-color: #0D0D0D;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+    .plat>picture{
+        width: 180px;
+        height: 180px;
+        transition: 0.5s;
+    }
+    .plat>picture>img{
+        width: 100%;
+        height: 100%;
+    }
+   
 
     /*=====================Link=====================*/
 
@@ -241,6 +270,9 @@
     .aviso{
         height: 40%;
         width: 100%;
+    }
+    .text{
+        font-size: 1.7em;
     }
 
 }
