--- a/Estilos/Media-Querry2.css
+++ b/Estilos/Media-Querry2.css
@@ -41,7 +41,7 @@
 
         width: 125px;
         height: 55px;
-        padding-top: 17px;
+        padding-top: 12px;
 
         flex-shrink: 1;
 
@@ -59,7 +59,7 @@
      /*=====================Pesquisa=====================*/
 
     div#Pesq{
-        background: url("../Poster/Poster2.jpg");
+        background: url("../Poster/Poster3.jpg");
         background-size: cover;
 
         height: 87vh;
@@ -110,19 +110,17 @@
     .filmes{
         height: 80%;
         width: 18vw;
-        transition: 0.5s;
+        transition: box-shadow 0.5s;
+        transition-duration: 0.5s;
     }
     .filmes>picture>img{
         width: 230px;
         height: 320px;
-        transition: 0.3s;
     }
     .filmes:hover{
         box-shadow: 0px 1px 17px gold;
     }
-    .filmes>picture>img:hover{
-        padding: 3px;
-    }
+   
 
     /*=====================Lançamento=====================*/
     div#Lancamento{
@@ -141,19 +139,31 @@
 
         height: 110vh;
     }
+    .lancimg{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 88%;
+    }
+    .lancimg>img{
+        width: 800px;
+    }
     .fam{
-        background-color: red;
         width: 65%;
         height: 75%;
+        background-color: #0D0D0D;
+        flex-direction: column;
+
     }
     .fam>h3{
         text-align: center;
 
-        font-size: 1.6em;
-        padding: 20px;
+        font-size: 1.8em;
+
+        width: 700px;
     }
     .PLanc{
-        background-color: #ffa500;
+        background-color: #0D0D0D;
         width: 20%;
         height: 60%;
     }
@@ -162,13 +172,18 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        width: 100%;
         height: 100%;
     }
     .PLanc>ul>li{
         padding: 12px;
         margin: 20px;
 
-        border-bottom: 3px solid black;
+        border-bottom: 3px solid gold;
+    }
+    .alink{
+        font-size: 1.4em;
+        color: gold;
     }
 
     /*=====================Series=====================*/
@@ -210,10 +225,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 70%;
+    width: 20%;
     height: 80%;
     margin: 12px;
     padding: 18px;
+    }
+    .Atores>picture{
+        width: 250px;
+    }
+    .Atores>picture>img{
+        width: 100%;
+        height: 100%;
     }
     .name{
         font-size: 1.6em;
@@ -223,15 +245,15 @@
 
     div#Plataformas{
         display: block;
-        background-color: #ffa500;
+        background-color: #060606; 
         height: 50vh;
     }
     div#Plataformas>h2{
+        color: gold;
         text-align: center;
         padding: 20px;
     }
     .Plata{
-        background-color: pink;
         height: 78.5%;
         display: flex;
         flex-flow: row nowrap;
@@ -239,9 +261,26 @@
     .plat{
         width: 100%;
         height: 100%;
-        background-color: orangered;
+        background-color: #0D0D0D;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-
+    .plat>picture{
+        width: 200px;
+        height: 200px;
+        transition: margin-bottom 0.5s, box-shadow 0.5s, border 0.3s;
+        transition-duration: 0.5s;
+    }
+    .plat>picture:hover{
+        margin-bottom: 20px;
+        border: 4px solid gold;
+        box-shadow: 0px 1px 17px gold;
+    }
+    .plat>picture>img{
+        width: 100%;
+        height: 100%;
+    }
     /*=====================Link=====================*/
     footer#link{
     height: 50vh;
@@ -262,7 +301,7 @@
         padding-right: 20px;
     }
     .text{
-        font-size: 1.8em;
+        font-size: 2em;
     }
     .links{
         font-size: 1.3em;
