--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
@@ -15,6 +19,9 @@ header>h1{
     padding: 12px;
     text-align: center;
     width: 300px;
+    font-family: 'TikTok Sans';
+    font-weight: bold;
+
 }
 
 span#burger{
@@ -39,10 +46,11 @@ menu>ul>li>a{
     text-align: center;
 
     font-size: 1.2em;
+    font-family: "Noto Sans", sans-serif;
 
-    background-color: gold;
-    border: 2px solid #00090D;
-    color: black;
+    background-color: #00090D;
+    border: 2px solid yellow;
+    color: gold;
 }
 menu>ul>li>a:hover{
     border: 2px solid gold;
@@ -62,7 +70,7 @@ div#Pesq{
     align-items: center;
     align-self: flex-start;
     height: 70vh;
-    background: url("../Poster/Poster.jpg") no-repeat;
+    background: url("../Poster/Poster3.jpg") no-repeat;
     background-size: cover;
     background-position: center right;
 }
@@ -129,7 +137,7 @@ div#Filmes2025{
     flex-direction: column;
 }
 .filmes{
-    width: 60%;
+    width: 250px;
     height: 30.7%;
     margin: 10px;
     background-color: #0D0D0D;
@@ -151,7 +159,7 @@ div#Lancamento{
 
 .Lanc{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     text-align: center;
@@ -159,13 +167,17 @@ div#Lancamento{
     height: 74%;
     background-color: #060606;
 }
+
 .PLanc>ul{
-    width: 100%;
-    height: 50%;
+    width: 350px;
+    height: 170px;
     list-style-type: none;
+
+        background-color: #0D0D0D;
+
 }
 .PLanc>ul>li{
-    padding: 7px;
+    padding: 12.5px;
     border-bottom: 5px solid gold;
 
 }
@@ -173,17 +185,28 @@ div#Lancamento{
     display: none;
 }
 
+.fam{
+    width: 390px;
+    height: 100px;
+    background-color: #0D0D0D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .fam>h3{
-    font-size: 1.4em;
+    font-size: 1.6em;
+    font-family: 'TikTok Sans';
+    font-weight: normal;
     color: gold;
     border-bottom: 4px solid gold;
     padding: 10px;
 }
 .alink{
+    font-family: "Intel One Mono", monospace;
     font-size: 1.3em;
     text-decoration: none;
 
-    color: gold;
+    color: yellow;
 }
 
 /*=====================Series=====================*/
@@ -250,6 +273,9 @@ div#Atuacao{
 }
 .name{
     color: yellow;
+
+    font-family: "Noto Sans", sans-serif;
+    font-weight: normal;
     font-size: 1.5em;
     padding: 10px;
 }
@@ -283,6 +309,8 @@ footer#link{
     padding: 15px;
 
     font-size: 1.2em;
+    font-family: 'TikTok Sans';
+    font-weight: normal;
     background-color: #0D0D0D;
     color: white;
 
@@ -303,6 +331,8 @@ a#links:hover{
     text-decoration: underline;
 }
 .text{
+    font-family: 'TikTok Sans';
+    font-weight: normal;
     text-align: center;
     padding: 20px;
 }
