--- a/Estilos/Media-Querry.css
+++ b/Estilos/Media-Querry.css
@@ -93,7 +93,7 @@
         box-shadow: 0px 1px 17px gold;
     }
     .filmes>picture{
-        width: 220px;
+        width: 195px;
         height: 300px;
         background-color: red;
 
@@ -125,12 +125,12 @@
 
     }
     .lancimg>img{
-        width: 700px;
+        width: 590px;
     }
     .fam{
         background-color: #0D0D0D;
         width: 90%;
-        height: 63.5%;
+        height: 68%;
         flex-direction: column;
     }
     .fam>h3{
@@ -166,7 +166,7 @@
     .alink{
         width: 100%;
         color: yellow;
-        font-size: 1.4em;
+        font-size: 1.3em;
    }
     /*=====================Series=====================*/
     div#series2025{
@@ -191,7 +191,8 @@
 
     }
     .series>picture>img{
-    width: 200px;
+        width: 195px;
+        height: 300px;
     }
 
     /*=====================Atuação=====================*/
@@ -210,7 +211,7 @@
     }
     .Atores>picture{
         width: 250px;
-        height: 400px;
+        height: 350px;
     }
     .Atores>picture>img{
         width: 100%;
@@ -227,6 +228,9 @@
         background-color: #060606;
         height: 50vh;
     }
+    div#Plataformas>.text{
+        color: yellow;
+    }
     .Plata{
         height: 78.5%;
         display: flex;
@@ -241,8 +245,8 @@
         align-items: center;
     }
     .plat>picture{
-        width: 180px;
-        height: 180px;
+        width: 160px;
+        height: 160px;
         transition: 0.5s;
     }
     .plat>picture>img{
@@ -273,6 +277,7 @@
     }
     .text{
         font-size: 1.7em;
+        color: black;
     }
 
 }
